# embedding_model_comparison

./: .env.example  .gitignore  chunks_seizure_250_lap50_chunks.txt  embedding_health.py  main.py  progress.json  progress_2.json  pyproject.toml
adding_25K_files/: main.py
adding_health_com/: main.py
document_sources/: questions.md  questions_2.md  questions_3.md
embedding_models/: all_embedding_models.py  models_conf.py  print_embedding_sizes.py
embedding_orchestrator/: upload_to_bucket.py  vector_search.py  vector_search_upload.py
pages/: 1_models.py  2_upload.py  3_query.py  3_query_bkup.py
sample/: sample_embedding.py
sqlite/: clear_table.py  create_table.py  index_metadata.db  sample_query.py
util/: token_chunker.py
